Document some eXo JVM parameters